--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
+        <header class="mt-4">
+            <!-- navbar Menu -->
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-5 w-5"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M4 6h16M4 12h8m-8 6h16" />
+                      </svg>
+                    </div>
+                    <ul
+                      tabindex="0"
+                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                      <li>
+                        <a>Donate Bangladesh</a>
+                      </li>
+                      </ul>
+                  </div>
+                  <a href="/home.html" class="btn btn-ghost text-2xl font-bold">Blog</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <div class="grid grid-cols-[auto_1fr] items-center gap-3">
+                      <img class="w-10 h-10 rounded-lg" src="./assets/logo.png" alt="donation picture">
+                      <h1 class="text-2xl font-bold">Donate Bangladesh</h1>
+                    </div>
+                  </div>
+                <div class="navbar-end">
+                  <img src="./assets/coin.png" alt="coin picture">
+                  <h1 class="text-xl font-bold">5500 BDT</h1>
+                </div>
+              </div>
+        </header>
 
         <script src ="./js/index.js"></script>
     </body>
