blog html page created

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       </li>
                       </ul>
                   </div>
-                  <a href="/home.html" class="btn btn-ghost text-2xl font-bold">Blog</a>
+                  <a href="/blog.html" target="_blank"  class="btn btn-ghost text-2xl font-bold">Blog</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <div class="grid grid-cols-[auto_1fr] items-center gap-3">
