first section added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <header class="mt-4">
+            <nav class="sicky top-0 bg-gray-200 shadow-sm p-4">
             <!-- navbar Menu -->
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -48,7 +49,34 @@
                   <h1 class="text-xl font-bold">5500 BDT</h1>
                 </div>
               </div>
+            </nav>
+            <div class="mt-8 text-center">
+                <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-green-300">Donation</button>
+                <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">History</button>
+            </div>
         </header>
+
+        <!-- main start -->
+         <main>
+             <section>
+                   <div>
+                    <img src="./assets/noakhali.png" alt="noakahli flood picture">
+                   </div>
+                   <button class="grid grid-cols-[auto_1fr]">
+                    <img src="./assets/coin.png" alt="coin picture"> 
+                    <p>0 BDT</p>
+                   </button>
+                   <div>
+                       <h2>Donate for Flood at Noakhali, Bangladesh</h2>
+                       <p> The recent floods in Noakhali have caused significant damage to<br> homes  infrastructure. Your donation will help provide essential<br> supplies and  to those affected by this disaster. Every contribution,<br> big or small, makes  difference. Please join us in supporting the relief<br> efforts and making a positive impact on the lives of those in need.</p>
+                   </div>
+                   <div>
+                    <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-green-300">Donate Now</button>
+                   </div>
+             </section>
+         </main>
+
+        
 
         <script src ="./js/index.js"></script>
     </body>
