--- a/index.html
+++ b/index.html
@@ -58,21 +58,73 @@
 
         <!-- main start -->
          <main>
-             <section>
+          <!-- Noakhali -->
+             <section class="flex flex-1 gap-5 ml-32 mt-10 mb-20">
                    <div>
                     <img src="./assets/noakhali.png" alt="noakahli flood picture">
-                   </div>
-                   <button class="grid grid-cols-[auto_1fr]">
+                    </div>
+                    <div>
+                   <button class="grid grid-cols-[auto_1fr] mb-4">
                     <img src="./assets/coin.png" alt="coin picture"> 
                     <p>0 BDT</p>
                    </button>
-                   <div>
-                       <h2>Donate for Flood at Noakhali, Bangladesh</h2>
+                   <div class="mb-5">
+                       <h2 class="text-lg font-bold mb-4">Donate for Flood at Noakhali, Bangladesh</h2>
                        <p> The recent floods in Noakhali have caused significant damage to<br> homes  infrastructure. Your donation will help provide essential<br> supplies and  to those affected by this disaster. Every contribution,<br> big or small, makes  difference. Please join us in supporting the relief<br> efforts and making a positive impact on the lives of those in need.</p>
                    </div>
                    <div>
-                    <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-green-300">Donate Now</button>
+                    <input type="text" placeholder="Write Donation Amount" class="w-full max-w-md p-3 border-gray-400 rounded-lg text-gray-700 placeholder-gray-400 mb-10">
                    </div>
+                   <div>
+                    <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-green-300 pl-40 pr-40">Donate Now</button>
+                   </div>
+                  </div>
+             </section>
+
+             <!-- Feni -->
+             <section class="flex flex-1 gap-5 ml-32 mt-10 mb-20">
+                   <div>
+                    <img src="./assets/feni.png" alt="Feni flood picture">
+                    </div>
+                    <div>
+                   <button class="grid grid-cols-[auto_1fr] mb-4">
+                    <img src="./assets/coin.png" alt="coin picture"> 
+                    <p>600 BDT</p>
+                   </button>
+                   <div class="mb-5">
+                       <h2 class="text-lg font-bold mb-4">Donate for Flood Relief in Feni,Bangladesh</h2>
+                       <p> The recent floods in Feni have devastated local communities, leading<br> to severe disruption and loss. Your generous donation will help<br> provide immediate aid, including food, clean water, and medical<br> supplies, to those affected by this calamity. Together, we can offer<br> crucial support and help rebuild lives in the aftermath of this disaster.<br> Every contribution counts towards making a real difference. Please<br> consider donating today to assist those in urgent need.</p>
+                   </div>
+                   <div>
+                    <input type="text" placeholder="Write Donation Amount" class="w-full max-w-md p-3 border-gray-400 rounded-lg text-gray-700 placeholder-gray-400 mb-10">
+                   </div>
+                   <div>
+                    <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-green-300 pl-40 pr-40">Donate Now</button>
+                   </div>
+                  </div>
+             </section>
+
+             <!-- Quota-Protest section -->
+             <section class="flex flex-1 gap-5 ml-32 mt-10 mb-20">
+                   <div>
+                    <img src="./assets/quota-protest.png" alt="quota protest picture">
+                    </div>
+                    <div>
+                   <button class="grid grid-cols-[auto_1fr] mb-4">
+                    <img src="./assets/coin.png" alt="coin picture"> 
+                    <p>2400 BDT</p>
+                   </button>
+                   <div class="mb-5">
+                       <h2 class="text-lg font-bold mb-4">Aid for Injured in the Quota Movement</h2>
+                       <p> The recent Quota movement has resulted in numerous injuries and<br> significant hardship for many individuals. Your support is crucial in<br> providing medical assistance, rehabilitation, and necessary supplies<br> to those affected. By contributing, you help ensure that injured<br>individuals receive the care and support they need during this<br> challenging time. Every donation plays a vital role in alleviating their<br> suffering and aiding in their recovery. Please consider making a<br> donation to support these brave individuals in their time of need.</p>
+                   </div>
+                   <div>
+                    <input type="text" placeholder="Write Donation Amount" class="w-full max-w-md p-3 border-gray-400 rounded-lg text-gray-700 placeholder-gray-400 mb-10">
+                   </div>
+                   <div>
+                    <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-green-300 pl-40 pr-40">Donate Now</button>
+                   </div>
+                  </div>
              </section>
          </main>
 
