--- a/blog.html
+++ b/blog.html
@@ -6,16 +6,16 @@
     <title>DOM Q&A</title>
 </head>
 <body>
-    <h1>Welcome to DOM Q&A Session</h1>
+    <h1 class="font-bold">Welcome to DOM Q&A Session</h1>
     <ol type="a">
         <li>What is the Document Object Model (DOM)?</li>
-        <p>Answer:</p>
+        <p>Answer:DOM is a Programming interface for HTML and CSS documents.By using DOM we can easily add or change the current HTML or CSS.</p>
         <li>How do you select an element from the DOM?</li>
-        <p>Answer:</p>
+        <p>Answer:I can select an element from the DOM by using id , class , tagName,classSelector ,attributeSelector , childSelector ,parentSelector etc.</p>
         <li>What is event delegation in the context of the DOM, and why is it useful?</li>
-        <p>Answer:</p>
+        <p>Answer:Manage events for elements that are dynamically added or removed within a parent element. </p>
         <li>How do you manipulate an element's attributes and styles using the DOM?</li>
-        <p>Answer:</p>
+        <p>Answer:setAttribute(): , getAttribute(): , removeAttribute(): </p>
     </ol>
 </body>
 </html>
