fixed with blog html and added text bold

--- a/blog.html
+++ b/blog.html
@@ -8,13 +8,13 @@
 <body>
     <h1 class="font-bold">Welcome to DOM Q&A Session</h1>
     <ol type="a">
-        <li>What is the Document Object Model (DOM)?</li>
+        <li><b>What is the Document Object Model (DOM)?</b></li>
         <p>Answer:DOM is a Programming interface for HTML and CSS documents.By using DOM we can easily add or change the current HTML or CSS.</p>
-        <li>How do you select an element from the DOM?</li>
+        <li><b>How do you select an element from the DOM?</b></li>
         <p>Answer:I can select an element from the DOM by using id , class , tagName,classSelector ,attributeSelector , childSelector ,parentSelector etc.</p>
-        <li>What is event delegation in the context of the DOM, and why is it useful?</li>
+        <li><b>What is event delegation in the context of the DOM, and why is it useful?</b></li>
         <p>Answer:Manage events for elements that are dynamically added or removed within a parent element. </p>
-        <li>How do you manipulate an element's attributes and styles using the DOM?</li>
+        <li><b>How do you manipulate an element's attributes and styles using the DOM?</b></li>
         <p>Answer:setAttribute(): , getAttribute(): , removeAttribute(): </p>
     </ol>
 </body>
