--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="fixed top-0 w-full z-50 bg-white shadow">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
-                    <a href="/blog.html" target="_blank" class="btn btn-ghost text-2xl font-bold">Blog</a>
+                    <a href="./blog.html" target="_blank" class="btn btn-ghost text-2xl font-bold">Blog</a>
                 </div>
                 <div class="navbar-center">
                     <div class="grid grid-cols-[auto_1fr] items-center gap-3">
